--- a/asso_style.css
+++ b/asso_style.css
@@ -55,6 +55,16 @@ p, main, .bouton-style, section {
         font-size: 60px;
     }
 
+    .carousel-inner img {
+        max-width: 100%;
+        max-height: 100vh;
+        margin: 0 auto;
+    }
+
+    .carousel {
+        max-width: 800px;
+        margin: 0 auto;
+    }
     
 }
 
@@ -76,6 +86,10 @@ p, main, .bouton-style, section {
     }
     .para-style {
         font-size: 22px;
+    }
+    .carousel {
+        max-width: 800px;
+        margin: 0 auto;
     }
 }
 
@@ -114,6 +128,16 @@ p, main, .bouton-style, section {
     .para-style {
         font-size: 4vmin;
     }
+
+    .petite-marge {
+        margin: 20px;
+    }
+
+    .taille-conteneur {
+        width: 120px;
+        background-color: blue;
+        text-align: center;
+    }
 }
 
 .sans-ombre {
@@ -142,6 +166,48 @@ p, main, .bouton-style, section {
     text-align: center;
     border-radius: 10px;
 }
+.style-lpo {
+    background-color: #333;
+    max-width: 100%;
+    height: 100%;
+}
+
+.custom-modal {
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.custom-modal .modal-dialog {
+    max-height: 80vh;
+    max-width: 20000px;
+}
+
+.modal-verti-centre {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.style-lpo {
+    background-color: #333;
+    max-width: 100%;
+    height: 100%;
+}
+.souligne {
+    text-decoration: underline;
+}
+
+header,
+main,
+.container,
+.border,
+#carouselExample,
+.carousel-item,
+.container-fluid,
+.custom-modal {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+}
+
 
 footer {
     box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.1);
