Ajout des balises meta et une police

--- a/asso_style.css
+++ b/asso_style.css
@@ -257,6 +257,13 @@ footer {
     padding: 10px;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Doodle+Shadow&display=swap');
+
+
+.font-doodle_shadow {
+    font-family: 'Rubik Doodle Shadow', cursive;
+}
+
 h1 {
     font-size: 5.9vw;
 }
